cmake_minimum_required(VERSION 3.10)

# set the project name
project(iviz_ros2_rcl_android)

link_directories(lib)
include_directories(../iviz_ros2_rcl/include/)

# add the executable
add_library(iviz_ros2_rcl_android SHARED ../iviz_ros2_rcl/iviz_ros2_rcl.cpp)


target_link_libraries( iviz_ros2_rcl_android
	PRIVATE
-Wl,--start-group
libaction_msgs__rosidl_generator_c.a
libaction_msgs__rosidl_typesupport_c.a
libaction_msgs__rosidl_typesupport_cpp.a
libaction_msgs__rosidl_typesupport_fastrtps_c.a
libaction_msgs__rosidl_typesupport_fastrtps_cpp.a
libactionlib_msgs__rosidl_generator_c.a
libactionlib_msgs__rosidl_typesupport_c.a
libactionlib_msgs__rosidl_typesupport_cpp.a
libactionlib_msgs__rosidl_typesupport_fastrtps_c.a
libactionlib_msgs__rosidl_typesupport_fastrtps_cpp.a
libament_index_cpp.a
libbuiltin_interfaces__rosidl_generator_c.a
libbuiltin_interfaces__rosidl_typesupport_c.a
libbuiltin_interfaces__rosidl_typesupport_cpp.a
libbuiltin_interfaces__rosidl_typesupport_fastrtps_c.a
libbuiltin_interfaces__rosidl_typesupport_fastrtps_cpp.a
libcomposition_interfaces__rosidl_generator_c.a
libcomposition_interfaces__rosidl_typesupport_c.a
libcomposition_interfaces__rosidl_typesupport_cpp.a
libcomposition_interfaces__rosidl_typesupport_fastrtps_c.a
libcomposition_interfaces__rosidl_typesupport_fastrtps_cpp.a
libconsole_bridge.a
libdiagnostic_msgs__rosidl_generator_c.a
libdiagnostic_msgs__rosidl_typesupport_c.a
libdiagnostic_msgs__rosidl_typesupport_cpp.a
libdiagnostic_msgs__rosidl_typesupport_fastrtps_c.a
libdiagnostic_msgs__rosidl_typesupport_fastrtps_cpp.a
libexample_interfaces__rosidl_generator_c.a
libexample_interfaces__rosidl_typesupport_c.a
libexample_interfaces__rosidl_typesupport_cpp.a
libexample_interfaces__rosidl_typesupport_fastrtps_c.a
libexample_interfaces__rosidl_typesupport_fastrtps_cpp.a
libfastcdr.a
libfastrtps.a
libfoonathan_memory-0.7.1.a
libgeometry_msgs__rosidl_generator_c.a
libgeometry_msgs__rosidl_typesupport_c.a
libgeometry_msgs__rosidl_typesupport_cpp.a
libgeometry_msgs__rosidl_typesupport_fastrtps_c.a
libgeometry_msgs__rosidl_typesupport_fastrtps_cpp.a
libgrid_map_msgs__rosidl_generator_c.a
libgrid_map_msgs__rosidl_typesupport_c.a
libgrid_map_msgs__rosidl_typesupport_cpp.a
libgrid_map_msgs__rosidl_typesupport_fastrtps_c.a
libgrid_map_msgs__rosidl_typesupport_fastrtps_cpp.a
libiviz_msgs__rosidl_generator_c.a
libiviz_msgs__rosidl_typesupport_c.a
libiviz_msgs__rosidl_typesupport_cpp.a
libiviz_msgs__rosidl_typesupport_fastrtps_c.a
libiviz_msgs__rosidl_typesupport_fastrtps_cpp.a
liblifecycle_msgs__rosidl_generator_c.a
liblifecycle_msgs__rosidl_typesupport_c.a
liblifecycle_msgs__rosidl_typesupport_cpp.a
liblifecycle_msgs__rosidl_typesupport_fastrtps_c.a
liblifecycle_msgs__rosidl_typesupport_fastrtps_cpp.a
libnav_msgs__rosidl_generator_c.a
libnav_msgs__rosidl_typesupport_c.a
libnav_msgs__rosidl_typesupport_cpp.a
libnav_msgs__rosidl_typesupport_fastrtps_c.a
libnav_msgs__rosidl_typesupport_fastrtps_cpp.a
librcl.a
librcl_action.a
librcl_interfaces__rosidl_generator_c.a
librcl_interfaces__rosidl_typesupport_c.a
librcl_interfaces__rosidl_typesupport_cpp.a
librcl_interfaces__rosidl_typesupport_fastrtps_c.a
librcl_interfaces__rosidl_typesupport_fastrtps_cpp.a
librcl_lifecycle.a
librcl_logging_noop.a
librcl_yaml_param_parser.a
librcpputils.a
librcutils.a
librmw.a
librmw_dds_common.a
librmw_dds_common__rosidl_generator_c.a
librmw_dds_common__rosidl_typesupport_c.a
librmw_dds_common__rosidl_typesupport_cpp.a
librmw_dds_common__rosidl_typesupport_fastrtps_c.a
librmw_dds_common__rosidl_typesupport_fastrtps_cpp.a
librmw_fastrtps_cpp.a
librmw_fastrtps_shared_cpp.a
librosgraph_msgs__rosidl_generator_c.a
librosgraph_msgs__rosidl_typesupport_c.a
librosgraph_msgs__rosidl_typesupport_cpp.a
librosgraph_msgs__rosidl_typesupport_fastrtps_c.a
librosgraph_msgs__rosidl_typesupport_fastrtps_cpp.a
librosidl_runtime_c.a
librosidl_typesupport_c.a
librosidl_typesupport_cpp.a
librosidl_typesupport_fastrtps_c.a
librosidl_typesupport_fastrtps_cpp.a
libsensor_msgs__rosidl_generator_c.a
libsensor_msgs__rosidl_typesupport_c.a
libsensor_msgs__rosidl_typesupport_cpp.a
libsensor_msgs__rosidl_typesupport_fastrtps_c.a
libsensor_msgs__rosidl_typesupport_fastrtps_cpp.a
libshape_msgs__rosidl_generator_c.a
libshape_msgs__rosidl_typesupport_c.a
libshape_msgs__rosidl_typesupport_cpp.a
libshape_msgs__rosidl_typesupport_fastrtps_c.a
libshape_msgs__rosidl_typesupport_fastrtps_cpp.a
libstatistics_msgs__rosidl_generator_c.a
libstatistics_msgs__rosidl_typesupport_c.a
libstatistics_msgs__rosidl_typesupport_cpp.a
libstatistics_msgs__rosidl_typesupport_fastrtps_c.a
libstatistics_msgs__rosidl_typesupport_fastrtps_cpp.a
libstd_msgs__rosidl_generator_c.a
libstd_msgs__rosidl_typesupport_c.a
libstd_msgs__rosidl_typesupport_cpp.a
libstd_msgs__rosidl_typesupport_fastrtps_c.a
libstd_msgs__rosidl_typesupport_fastrtps_cpp.a
libstd_srvs__rosidl_generator_c.a
libstd_srvs__rosidl_typesupport_c.a
libstd_srvs__rosidl_typesupport_cpp.a
libstd_srvs__rosidl_typesupport_fastrtps_c.a
libstd_srvs__rosidl_typesupport_fastrtps_cpp.a
libstereo_msgs__rosidl_generator_c.a
libstereo_msgs__rosidl_typesupport_c.a
libstereo_msgs__rosidl_typesupport_cpp.a
libstereo_msgs__rosidl_typesupport_fastrtps_c.a
libstereo_msgs__rosidl_typesupport_fastrtps_cpp.a
libtest_msgs__rosidl_generator_c.a
libtest_msgs__rosidl_typesupport_c.a
libtest_msgs__rosidl_typesupport_cpp.a
libtest_msgs__rosidl_typesupport_fastrtps_c.a
libtest_msgs__rosidl_typesupport_fastrtps_cpp.a
libtf2_msgs__rosidl_generator_c.a
libtf2_msgs__rosidl_typesupport_c.a
libtf2_msgs__rosidl_typesupport_cpp.a
libtf2_msgs__rosidl_typesupport_fastrtps_c.a
libtf2_msgs__rosidl_typesupport_fastrtps_cpp.a
libtracetools.a
libtrajectory_msgs__rosidl_generator_c.a
libtrajectory_msgs__rosidl_typesupport_c.a
libtrajectory_msgs__rosidl_typesupport_cpp.a
libtrajectory_msgs__rosidl_typesupport_fastrtps_c.a
libtrajectory_msgs__rosidl_typesupport_fastrtps_cpp.a
libunique_identifier_msgs__rosidl_generator_c.a
libunique_identifier_msgs__rosidl_typesupport_c.a
libunique_identifier_msgs__rosidl_typesupport_cpp.a
libunique_identifier_msgs__rosidl_typesupport_fastrtps_c.a
libunique_identifier_msgs__rosidl_typesupport_fastrtps_cpp.a
libvisualization_msgs__rosidl_generator_c.a
libvisualization_msgs__rosidl_typesupport_c.a
libvisualization_msgs__rosidl_typesupport_cpp.a
libvisualization_msgs__rosidl_typesupport_fastrtps_c.a
libvisualization_msgs__rosidl_typesupport_fastrtps_cpp.a
libyaml_static.a
-Wl,--end-group
)
