<?xml version="1.0"?>
<package format="2">
  <name>iviz_msgs</name>
  <version>0.0.1</version>
  <description>The iviz package</description>

  <maintainer email="akzeac@gmail.com">Antonio Zea</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

 <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
