<?xml version="1.0"?>
<package format="2">
  <name>e1_description</name>
  <version>0.0.0</version>
  <description>The ET18 URDF description package</description>

  <maintainer email="christian.frese@iosb.fraunhofer.de">fre</maintainer>

  <license>IOSB Proprietary, Copyright (c) 2013-2019 Fraunhofer IOSB, Karlsruhe, Germany. All rights reserved.</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
